5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4381/executions/1596_2895.log
== TEST (2019-03-26 18:59:16) 
-- CODE:
quantidade = float(input("Digite a quantidade de jogos: "))
valor_unitario = float(input("Digite o valor do jogo "))
frete = float(input("Digite o frete: ")
		
valor_total = quantidade * valor_unitario + frete
print(valor_total)
-- ERROR:
File "XXXX", line 5
    valor_total = quantidade * valor_unitario + frete
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:59:18) 
-- CODE:
quantidade = float(input("Digite a quantidade de jogos: "))
valor_unitario = float(input("Digite o valor do jogo "))
frete = float(input("Digite o frete: ")
		
valor_total = quantidade * valor_unitario + frete
print(valor_total)
-- EXECUTION TIME:
0.127458
-- ERROR:
  File "/home/codebench/codes/1596/2895/main.py", line 5
    valor_total = quantidade * valor_unitario + frete
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:59:19) 
-- CODE:
quantidade = float(input("Digite a quantidade de jogos: "))
valor_unitario = float(input("Digite o valor do jogo "))
frete = float(input("Digite o frete: ")
		
valor_total = quantidade * valor_unitario + frete
print(valor_total)
-- ERROR:
File "XXXX", line 5
    valor_total = quantidade * valor_unitario + frete
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:00:02) 
-- CODE:
quantidade = float(input("Digite a quantidade de jogos: "))
valor_unitario = float(input("Digite o valor do jogo "))
frete = float(input("Digite o frete: "))
valor_total = quantidade * valor_unitario + frete
print(valor_total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:00:04) 
-- CODE:
quantidade = float(input("Digite a quantidade de jogos: "))
valor_unitario = float(input("Digite o valor do jogo "))
frete = float(input("Digite o frete: "))
valor_total = quantidade * valor_unitario + frete
print(valor_total)
-- EXECUTION TIME:
0.167067
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
